--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://ethan.heroku.com
+url: http://ethnt.me
 title: Ethan Turkeltaub
 subtitle: 
 author: Ethan Turkeltaub
