--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://ethnt.me
 title: Ethan Turkeltaub
-subtitle: 
+subtitle: The weblog of Ethan Turkeltaub, student and web developer.
 author: Ethan Turkeltaub
 simple_search: http://google.com/search
-description: 
+description: The weblog of Ethan Turkeltaub.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -17,9 +17,9 @@ date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
-subscribe_email:
+subscribe_email: ethan.turkeltaub@gmail.com
 # RSS feeds can list your email address if you like
-email:
+email: ethan.turkeltaub@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -37,7 +37,7 @@ markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 7          # Posts per page on the blog index
-pagination_dir:       # Directory base for pagination URLs eg. /blog/page/2/
+pagination_dir: /      # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
@@ -58,42 +58,42 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
-github_show_profile_link: true
-github_skip_forks: true
+#github_user:
+#github_repo_count: 0
+#github_show_profile_link: true
+#github_skip_forks: true
 
 # Twitter
-twitter_user:
-twitter_tweet_count: 4
-twitter_show_replies: false
-twitter_follow_button: true
-twitter_show_follower_count: false
-twitter_tweet_button: true
+#twitter_user:
+#twitter_tweet_count: 4
+#twitter_show_replies: false
+#twitter_follow_button: true
+#twitter_show_follower_count: false
+#twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
-google_plus_one_size: medium
+#google_plus_one: false
+#google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+#googleplus_user:
+#googleplus_hidden: false
 
 # Pinboard
-pinboard_user:
-pinboard_count: 3
+#pinboard_user:
+#pinboard_count: 3
 
 # Delicious
-delicious_user:
-delicious_count: 3
+#delicious_user:
+#delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+#disqus_short_name:
+#disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+#google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+#facebook_like: false
